Filter private aggregate devices from macOS device enumerations

This is done specifically to filter out the aggregate devices created
when using kAudioUnitSubType_VoiceProcessingIO. Those should not be
directly user-selectable.

This CL allows other aggregate devices, but ensures they do not claim
to support native echo cancellation, since they don't. Those devices
will have to use software AEC.

Bug: 837227
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Iebb5286cafebe40204899ee2b7f1e0ff263d1fd6
Reviewed-on: https://chromium-review.googlesource.com/1030170
Commit-Queue: Oskar Sundbom <ossu@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555736}
Former-commit-id: 8b3f87d4df018936be7784b86f1542e35d078c67